WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309020
UI process may crash due to WebPageProxy null deref under -[WKPrintingView _adjustPrintingMarginsForHeaderAndFooter]
https://bugs.webkit.org/show_bug.cgi?id=309020
Summary
UI process may crash due to WebPageProxy null deref under -[WKPrintingView _a...
Abrar Rahman Protyasha
Reported
2026-03-02 16:32:07 PST
rdar://165531670
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-03-03 03:08:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59791
EWS
Comment 2
2026-03-03 13:45:04 PST
Committed
308577@main
(52c5546da56a): <
https://commits.webkit.org/308577@main
> Reviewed commits have been landed. Closing PR #59791 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug