UI process may crash due to WebPageProxy null deref under -[WKPrintingView _adjustPrintingMarginsForHeaderAndFooter] https://bugs.webkit.org/show_bug.cgi?id=309020 rdar://165531670

Reviewed by Lily Spiniolas.

We have observed crashes under -_adjustPrintingMarginsForHeaderAndFooter
where we make an invalid address read at 0x78. This corresponds to the
m_uiClient member in WebPageProxy, which we dereference in header/footer
height computation methods, implying we perform a null dereference on
the WebPageProxy instance from WKPrintingView.

In this patch, we avoid this crash by doing a null check first.

* Source/WebKit/UIProcess/mac/WKPrintingView.mm:
(-[WKPrintingView _adjustPrintingMarginsForHeaderAndFooter]):

Canonical link: https://commits.webkit.org/308577@main